<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_1" />

        <ImageView
            android:contentDescription="@string/cont_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:src="@drawable/scsh1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_2" />

        <ImageView
            android:contentDescription="@string/cont_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:src="@drawable/centre_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_3" />

        <ImageView
            android:contentDescription="@string/cont_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:src="@drawable/scsh2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_4" />

        <ImageView
            android:contentDescription="@string/cont_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:src="@drawable/delete_buttton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="6dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_desc"
                android:src="@drawable/ic_action_collection" />

            <ImageView
                android:contentDescription="@string/cont_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_save" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/about_body_6" />

    </LinearLayout>

</ScrollView>
